--- a/package.json
+++ b/package.json
@@ -584,13 +584,17 @@
                  "language": "loremipsum",
                  "path": "./snippets/loremipsum.json"
             },
-	    {
-		"language": "cmake",
-		"path": "./snippets/cmake.json"
-	    },
+	    	{
+				"language": "cmake",
+				"path": "./snippets/cmake.json"
+	    	},
             {
                  "language": "zig",
                  "path": "./snippets/zig.json"
+            },
+            {
+                "language": ["autohotkey", "ahk", "ah2"],
+                "path": "./snippets/autohotkey/autohotkey.json"
             }
         ]
     }
